# ucns

./: .gitignore  .zenodo.json  AGENTS.md  CANON.md  CHANGELOG.md  CLAUDE.md  CODEX_HANDOFF.md  CONTRIBUTING.md  DOCTRINE.md  LICENSE  LICENSE-COMMERCIAL.md  MANIFEST.in  MANIFEST.md  README.md  RELEASE.md  REVIEW_PACKET.md  STACK_MANIFEST.json  accreditation.md  depth7-frontier.md  phi_compose_probe.py  phi_compose_probe_v3.py  prime5_widening_probe.py  prime_carpet_probe.py  pyproject.toml  ucns-lemma8-depth3.md  ucns-spec-frontier-v090.md  ucns-spec.md  ucns-theorem-n.md  ucns-v06-completeness-proof.md  ucns-v06-left-quotient-completeness.md  ucns_code_v065.py  ucns_msdmd.ts
.github/: PROFILE_REPAIR_STATUS.md  branch-init.md  profile-repair-evidence.md  public-gonol-final-reconciliation-v2.trigger  public-gonol-final-reconciliation.trigger  public-gonol-finalize.trigger  public-gonol-formal-repair.trigger
.loto/: README.md  addition_boundary  division_theory  multiply_associativity  multiply_commutativity_ruling  multiply_identity  multiply_well_defined  structure_naming
archive/: .gitignore  AGENTS.md  CLAUDE.md  CODEX_HANDOFF.md  MANIFEST.md  RELEASE.md  operational_widening_probe.py  phi_compose_probe_v2.py  ternary_widening_probe.py  ucns-code-v065.py  ucns-lemma8-depth3.md  ucns-spec-frontier-v090.md  ucns-theorem-n.md
audit/: obligation_ledger.md
code/: proof_trace.py
codex-handoff/: 00-overview-and-branch-discipline.md  01-exhaustive-payload-factor-search.md  03-oracle-catalogue-equivalence.md  04-complete-quotient-consumers.md  05-nonempty-immutable-object-model.md  06-codec-claims-license.md  07-compatibility-validation-definition-of-done.md  08-idempotents-local-groups-2i-no-go.md
contracts/: __init__.py  _harness.py  test_identity_two_sided.py  test_multiply_canonical.py  test_quotient_solvability.py  test_structure_axioms.py
docs/: CANDIDATE_PACKS.md  CHOICE_POLICY.md  CHOICE_PRESERVATION.md  COMPARISON_POLICY.md  EVALUATOR_LAB.md  EXPERIMENT_MANIFESTS.md  LAYER_PAIRING.md  PRODUCER_CONTRACT.md  RETAINED_STRUCTURE.md  STRUCTURE_CONTRACT.md  TRAVERSAL_POLICY.md  base-geometry.md  canonical-factor-selection.md  carrier-support-pruning.md  chapter-1.md  chapter_1_subtractive_foundations.md  claims-ledger.md  coherence-primes-scarcity.md  edcm-edcmbone-bridge-checklist.md  eng_ucns_spec.md  local-groups-and-relational-geometry.md  mathematical-glossary.md  next-action-2026-06-30-ci-pytest-cache.md  prime-quartet-discontinuity.md  public-gonol-lemma-impact.md  public-gonol.md  pure-ucns-number-system.md  reproducibility.md  testpypi-release-candidate.md  ucns-g-prime-cylinder-supplement.md  ucns-native-caching.md  ucns-shape-reconciliation.md  ucns-spec-status-addendum-2026-05-16.md  ucns_operational_widening.md  unitcircle-import-assessment.md
formal/: README.md  Ucns.lean  cancellativity-step1-findings.md  cancellativity_step1_search.py  lake-manifest.json  lakefile.lean
pcea-ucns/: attack_harness.py  ucns-crypto-domain-v0.md
scripts/: bench_ucns_cache.py  module_build_check.py  ratios_check.py
tests/: test_attack_harness.py  test_base_geometry_contracts.py  test_bridge_round_trip.py  test_candidates.py  test_canonical_constructor_validation.py  test_carrier.py  test_catalogue.py  test_catalogue_coverage.py  test_certified_negative_results.py  test_comparison.py  test_docs_claim_guardrail.py  test_envelope.py  test_evidence_envelope.py  test_experiments.py  test_factor_search_provenance.py  test_formal_conformance.py  test_foundations.py  test_laboratory.py  test_policy.py  (+26 more)
(+246 files in other folders)
